# worker-agent-negotiator

./: .gitignore  README.md  main.py  pyproject.toml
agents/: voice_agent.py
app/: main.py
app/agents/: voice_agent.py
app/core/: config.py
app/models/: database.py  negotiation.py  transcript_message.py
app/services/: call_session.py  db_service.py
core/: config.py
