[project]
name = "worker-agent-negotiator"
version = "2.0.0"
description = "Twilio Media Streams negotiation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.24.0",
    "twilio>=9.0.0",
    "google-cloud-speech>=2.21.0",
    "google-auth>=2.23.0",
    "openai>=1.12.0",
    "httpx>=0.25.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg2>=2.9.11",
]
